[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "qval"
author = "George Usan-Podgornov"
author-email = ""
home-page = "https://github.com/OptimalStrategy/Qval"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
exclude = 'migrations/|\.git/|\.tox'